fix popover z-index

--- a/novaideo/static/less/novaideo.less
+++ b/novaideo/static/less/novaideo.less
@@ -61,7 +61,7 @@
 }
 
 .popover{
-    z-index: 1050  
+    z-index: 2000  
 }
 
 .action-popover-container{
